<resources>
    <string name="app_name">BowlPicks</string>
    <string name="score_header">Score:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up_message">Please Sign In:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="vs">vs</string>

    <string name="g1Name">Bowl One:</string>
    <string name="g2Name">Bowl Two:</string>

    <string name="g1home">Team 1</string>
    <string name="g1away">Team 2</string>
    <string name="g2home">Team 3</string>
    <string name="g2away">Team 4</string>

    <string name="submit">Submit</string>
    <string name="prompt_display_name">Your Display Name</string>
    <string name="display_name_header">Enter a name to be used to identify you:</string>
    <string name="pick_header">Pick Your Games!</string>
    <string name="name_header">Name:</string>
    <string name="game_header">Game:</string>

</resources>
