<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zgriesinger.bowlpicks.SignUpActivity">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:padding="40sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_message"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/prompt_email"
            android:id="@+id/email_field"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/prompt_password"
            android:id="@+id/password_field"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:hint="@string/prompt_password_confirm"
            android:id="@+id/password_field_confirm"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:id="@+id/sign_up_act_button"
            android:text="@string/sign_up"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
