<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zgriesinger.bowlpicks.LoginActivity">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:paddingTop="50sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp">
       <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:id="@+id/email_field"
            android:inputType="textEmailAddress"  />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:id="@+id/password_field"
            android:inputType="textPassword"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_act_button"
            android:text="@string/login"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
